--- a/src/main/resources/templates/connect/facebookConnect.html
+++ b/src/main/resources/templates/connect/facebookConnect.html
@@ -6,7 +6,7 @@
 <body>
 <h3 style="text-align:center">Connect to Facebook</h3>
 
-<form id='signIn' name='signIn' action="/connect/facebook" method="POST" style="text-align:center">
+<form id='signIn' name='signIn' action="/api/facebook/connect/facebook" method="POST" style="text-align:center">
     <div class="style7">
         <input type="image" name="submit" src="https://www.facebook.com/images/fb_icon_325x325.png" border="0" alt="Submit" />
     </div>
