--- a/src/main/resources/templates/connect/facebookConnected.html
+++ b/src/main/resources/templates/connect/facebookConnected.html
@@ -10,7 +10,7 @@
 </p>
 
 <p  style="text-align:center">
-    Click <a href="/">here</a> to see some entries from your Facebook feed.
+    Click <a href="/api/facebook/login">here</a> to see some entries from your Facebook feed.
 </p>
 </body>
 </html>
