--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -16,7 +16,7 @@
     <img th:if="${post.picture}" th:src="${post.picture}"> </img>
 </div>
 
-<form action="/connect/facebook" method="post">
+<form action="/api/facebook/connect/facebook" method="post">
     <div class="formInfo">
         <p>
         <h5>
