--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -16,9 +16,14 @@
     <img th:if="${post.picture}" th:src="${post.picture}"> </img>
 </div>
 
-<form action="/api/facebook/posts" method="get">
+<form action="/api/facebook/posts/create" method="get">
     <button type="submit">Create a new post</button>
     <input type="hidden" name="_method" value="save"/>
+</form>
+
+<form action="/api/facebook/posts" method="get">
+    <button type="submit">Show all post</button>
+    <input type="hidden" name="_method" value="getAll"/>
 </form>
 
 <form action="/api/facebook/connect/facebook" method="post">
