--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -38,7 +38,7 @@
 </div>
 
 <br/>
-<form th:align="center" action="/api/facebook/connect/facebook" method="post">
+<form th:align="center" action="/connect/facebook" method="post">
     <button type="submit">Disconnect</button>
     <input type="hidden" name="_method" value="delete"/>
 </form>
